LIST OF CHANGES

 - Added 'sample_accession_numbers' to lims shim

release 85.1
 - Added 'purpose' to lims shim
 - utf8 option for test sqlite db
 
release 85.0
 - lims shim
   - endeavours to ensure consistency of primary info (e.g. id_run, position)
     with drivers
   - will pass through arguments to driver constructor if it takes them

release 84.12 
 - composition and component serialization to rpt 

release 84.11
 - Operations (inflation and deflation) on rpt strings and their hash
   representation and lists of rpt values (based on npg_qc::autoqc::role::rpt_key)
 - Factory to create composition from a string representation of an rpt list
 - New filename method for the illumina component
 - Alter "run complete" email alert text to make clear analysis and qc time

release 84.10
 - create multi-attribute methods automatically
 - added method st::api::lims::any_sample_consent_withdrawn
 - removed potential warnings in event notification RT#495946

release 84.9
 - transcriptome find updated for RNA-SeQC directory and its gtf file 
 - generic serializable sequence composition framework and illumina
   sequencing specific component
 - lims shim now works out driver type from a given driver
 - sequencing failure RT emails cope with GCLP (no batch_id)
 - add predicates for glossary roles

release 84.8
 - jenkins daemon definition: remove hardcoded path to prod user home directory
 - refactor snv finder to stop warnings when ref genome is undefined RT#481506
 - make function for parsing reference gemone public since it is used outside
   of the module where it is defined
 - use RTAComplete file in fallback local (instead of ftp) determination of run
   progress (which is consistent with ftp process and required for HiSeqX)

release 84.7
 - accommodate LIMs-defined dual indexes
 - Illumina samplesheet generation: do not truncate single index when shorter first
     part of dual index is present; this was written with spiked Phix in mind,